--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,7 +1,29 @@
 .App {
   text-align: center;
-}
+  color: red;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+}
+button {
+  width:10%;
+  height: 20%;
+  font-size: large;
+  color: red;
+  background: lightgreen;
+  border-radius: 10px;
+  border: 1px solid red;
+}
+.login{
+    display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: space-around;
+  margin: 1%;
+  padding: 1%;
+
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -27,7 +49,11 @@
 .App-link {
   color: #61dafb;
 }
+.login {
 
+  color:red;
+  border: 3px solid red;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
